--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <meta name="author" content="Brajesh Kumar" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Language" content="en" />
-    <link rel="canonical" href="https://brajeshkumar.dev/" />
+    <link rel="canonical" href="https://edtech-community.com/" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://brajeshkumar.dev/" />
+    <meta property="og:url" content="https://edtech-community.com/" />
     <meta property="og:title" content="Brajesh Kumar | EdTech-Community | AI Engineer & Full Stack Developer Portfolio" />
     <meta property="og:description" content="Portfolio of Brajesh Kumar - AI Engineer, EdTech-Community founder, Full Stack Developer, and UI/UX Designer. Specializing in Google Cloud, Azure, Firebase, Kong, React, Python, Machine Learning. Join the EdTech-Community for learning and innovation. Available for freelance projects globally." />
-    <meta property="og:image" content="https://brajeshkumar.dev/personal-dark.jpg" />
+    <meta property="og:image" content="https://edtech-community.com/personal-dark.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="EdTech-Community | Brajesh Kumar Portfolio" />
@@ -32,10 +32,10 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://brajeshkumar.dev/" />
+    <meta property="twitter:url" content="https://edtech-community.com/" />
     <meta property="twitter:title" content="Brajesh Kumar | EdTech-Community | AI Engineer & Full Stack Developer" />
     <meta property="twitter:description" content="AI Engineer, EdTech-Community founder, Full Stack Developer, and UI/UX Designer. Specializing in Google Cloud, Azure, Firebase, Kong, React, Python, Machine Learning. Join the EdTech-Community for learning and innovation. Available for freelance projects globally." />
-    <meta property="twitter:image" content="https://brajeshkumar.dev/personal-dark.jpg" />
+    <meta property="twitter:image" content="https://edtech-community.com/personal-dark.jpg" />
     <meta property="twitter:creator" content="@brajesh31" />
     <meta property="twitter:site" content="@brajesh31" />
 
@@ -54,8 +54,8 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Brajesh Kumar",
-      "url": "https://brajeshkumar.dev",
-      "image": "https://brajeshkumar.dev/personal-dark.jpg",
+      "url": "https://edtech-community.com/",
+      "image": "https://edtech-community.com/personal-dark.jpg",
       "sameAs": [
         "https://github.com/Brajesh31",
         "https://www.linkedin.com/in/brajesh-kumar-9b58651a8/",
@@ -135,8 +135,8 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "EdTech-Community",
-      "url": "https://brajeshkumar.dev/",
-      "logo": "https://brajeshkumar.dev/favicon.png",
+      "url": "https://edtech-community.com/",
+      "logo": "https://edtech-community.com/favicon.png",
       "sameAs": [
         "https://github.com/Brajesh31",
         "https://linkedin.com/in/brajesh-kumar-9b58651a8"
@@ -156,7 +156,7 @@
       "@type": "WebSite",
       "name": "Brajesh Kumar Portfolio | EdTech-Community",
       "description": "Professional portfolio showcasing AI engineering, full stack development, and UI/UX design projects with EdTech-Community initiatives",
-      "url": "https://brajeshkumar.dev",
+      "url": "https://edtech-community.com/",
       "author": {
         "@type": "Person",
         "name": "Brajesh Kumar"
@@ -166,7 +166,7 @@
       "keywords": "portfolio, AI engineer, full stack developer, UI/UX designer, React, Python, machine learning, Google Cloud, Azure, Firebase, Kong, EdTech-Community",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://brajeshkumar.dev/#/projects?search={search_term_string}",
+        "target": "https://edtech-community.com/projects?search={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
